--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
+spring.datasource.url= jdbc:postgresql://localhost:5432/cine_distrito
 spring.datasource.username= postgres
 spring.datasource.password= 1234
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
