--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 spring.datasource.url= jdbc:postgresql://localhost:5432/cine_distrito
 spring.datasource.username= postgres
 spring.datasource.password= 1234
@@ -5,3 +6,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
+spring.datasource.driver-class-name=org.postgresql.Driver
